...
                    Text(stringResource(ReservationType.UPCOMING.title))
                },
                onClick = {
                    onReservationTypeChange(ReservationType.UPCOMING)
                    expanded = !expanded
                },
                modifier = Modifier.testTag("ReservationType.UPCOMING")
            )
            DropdownMenuItem(
                text = {
                    Text(stringResource(ReservationType.OLD.title))
                },
                onClick = {
...
