<resources>
    <string name="app_name">android-2425-gent2</string>
    <string name="home">home</string>
    <string name="calendar">kalender</string>
    <string name="reservations">Reservaties</string>
    <string name="notifications">Notificaties</string>
    <string name="profile">Profiel</string>
    <string name="upcoming_reservations">Aankomende reservaties</string>
    <string name="old_reservations">Oude reservaties</string>
    <string name="select_type_reservations">Selecteer type reservaties</string>
    <string name="reservation_details">Reservatie details</string>
    <string name="cancel_reservation">Annuleer reservatie</string>
    <string name="date">Datum</string>
    <string name="boat">boot</string>
    <string name="reservation_time_slot_details">Reservatie details</string>
    <string name="start_time">Van: %1$s</string>
    <string name="end_time">Tot: %1$s</string>
    <string name="reserve_time_slot">Reserveer</string>
    <string name="canceled_reservations">Geannuleerde reservaties</string>
    <string name="com_auth0_domain">rise-gent2.eu.auth0.com</string>
    <string name="com_auth0_client_id">8vJtbXg2FptHGmKrpFl1tZwhiXOJZ57l</string>
    <string name="com_auth0_scheme">password</string>
    <string name="the_reservations_could_not_be_loaded">De reservaties konden niet geladen worden.</string>
    <string name="unknown_error_occurred">Er is iets misgelopen</string>
    <string name="wait_for_process_your_payment">Even geduld terwijl we uw betaling verwerken.</string>
    <string name="processing_payment">Betaling verwerken...</string>
    <string name="reservation_failed">Reservering mislukt</string>
    <string name="error_while_processing_reservation">cEr is een fout opgetreden bij het verwerken van uw reservering.</string>
    <string name="success">Succes</string>
    <string name="reservation_confirmed">Reservering bevestigd!</string>
    <string name="close_reservation_details">Sluiten</string>
    <string name="name">Naam</string>
    <string name="time">Tijd</string>
    <string name="placed_reservation">Reservering geplaats</string>
    <string name="payment_loading_indicator">betaling laden</string>
    <string name="admin_dashboard">Admin Dashboard</string>
    <string name="go_to_dashboard">Admin Dashbord</string>
    <string name="logout">Log out</string>
    <string name="manage_guests">Gasten beheren</string>
    <string name="welcome_admin_message">Welkom bij het Admin Paneel</string>
    <string name="quick_actions">Snelle Acties</string>
    <string name="users_list">Gasten</string>
    <string name="edit_profile">Profiel bijwerken</string>
    <string name="privacy_settings">Instellingen</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="notification_details">Notification Details</string>
    <string name="back">Back</string>
    <string name="not_cancellable">Niet annuleerbaar</string>
    <string name="user_details">Gast Details</string>
    <string name="approve">Goedkeuren</string>
    <string name="manage_batteries">Overzicht boten</string>
    <string name="no_batteries_found">Geen batterijen gevonden</string>
</resources>