...
    val coroutineScope = rememberCoroutineScope()
    val reservationsUiState by viewModel.reservationsUiState.collectAsState()
    val selectedReservationUiState = viewModel.selectedReservationUiState
    val reservationTypeUiState = viewModel.reservationTypeUiState

    Column(modifier.padding(16.dp), verticalArrangement = Arrangement.spacedBy(16.dp)) {
        ReservationTypeSelectionDropDownMenu(
            reservationTypeUiState.reservationType,
            {
                viewModel.setReservationType(it)
            },
            modifier = modifier.testTag("ReservationTypeSelectionDropDownMenu"),
        )
...
